--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "rm -rf ./static/* && cross-env NODE_ENV=development webpack -w --colors --profile",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --inline --colors",
-    "build": "rm -rf ./static/* && cross-env NODE_ENV=production webpack --colors --profile",
-    "server": "http-server static"
+    "build": "rm -rf ./static/* && cross-env NODE_ENV=production webpack --colors --profile"
   },
   "author": "Eleven",
   "license": "ISC",
@@ -28,10 +27,10 @@
     "glob": "^7.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.11.1",
     "jquery": "^3.3.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "moment": "^2.22.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
