--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "http-server": "^0.11.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "moment": "^2.22.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
@@ -44,6 +43,7 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2"
   }
 }
