--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
+    "postcss-sprites": "^4.2.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^3.6.0",
