--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "postcss-sprites": "^4.2.1",
